# vcpkg-skeleton

./: .gitignore  CMakeLists.txt  README.md
Doom/: CMakeLists.txt
Doom/src/: Main.cpp  Main.h
Main/: CMakeLists.txt
